Fix: Update Library layout to 4 cards on desktop, 2 on tablet, 1 on mobile; Remove conflicting CSS override

--- a/src/styles/scss/_responsive_overrides.scss
+++ b/src/styles/scss/_responsive_overrides.scss
@@ -137,11 +137,7 @@ img {
         padding-right: 2rem;
     }
 
-    /* 2-column grids on tablet */
-    .col-md-6 {
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
+
 
     /* Card sizing */
     .card,
